# node.anitomy.js

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  anitomy.js  anitomy_wrap.cc  appveyor.yml  binding.gyp  index.js  package-lock.json  package.json  test.js
.github/: dependabot.yml
.github/workflows/: test.yml
compiler_tests/: codecvt_test.cpp
src/: anitomy_async.cpp  anitomy_async.h  anitomy_element_categories.h  anitomy_elements.cpp  anitomy_elements.h  anitomy_lib.cpp  anitomy_node.cpp  anitomy_object.cpp  anitomy_object.h  anitomy_sync.cpp  anitomy_sync.h  anitomyjs.cpp  anitomyjs.h  element_categories.h  element_pair_object.cpp  element_pair_object.h  elements_object.cpp  elements_object.h  nan_nowarn.h  options_object.cpp  options_object.h  parse_worker.cpp  parse_worker.h  util.cpp  util.h  utils.cpp  utils.h
src/objects/: anitomy_obj.cpp  anitomy_obj.h  elementpair_obj.cpp  elementpair_obj.h  elements_obj.cpp  elements_obj.h
test/: test.js
tests/: test.js  test2.js
